--- a/app/Resources/views/genus/show.html.twig
+++ b/app/Resources/views/genus/show.html.twig
@@ -4,6 +4,7 @@
 
 {% block body %}
     <h2 class="genus-name">{{ name }}</h2>
+
     <div class="sea-creature-container">
         <div class="genus-photo"></div>
         <div class="genus-details">
@@ -13,28 +14,25 @@
                 <dt>Known Species:</dt>
                 <dd>289</dd>
                 <dt>Fun Fact:</dt>
-                <dd>Octopuses can change the color of their body in just three-tenths of a second!</dd>
+                <dd>{{ funFact|raw }}</dd>
             </dl>
         </div>
     </div>
-
-    <div id="js-notes-wrapper"><div/>
+    <div id="js-notes-wrapper"></div>
 {% endblock %}
 
 {% block javascripts %}
     {{ parent() }}
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
 
     <script type="text/babel" src="{{ asset('js/notes.react.js') }}"></script>
-
     <script type="text/babel">
         var notesUrl = '{{ path('genus_show_notes', {'genusName': name}) }}';
 
         ReactDOM.render(
-          <NoteSection url={notesUrl}/>,
+          <NoteSection url={notesUrl} />,
           document.getElementById('js-notes-wrapper')
         );
     </script>
