--- a/app/Resources/views/admin/genus/new.html.twig
+++ b/app/Resources/views/admin/genus/new.html.twig
@@ -1,5 +1,23 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/css/bootstrap-datepicker.css">
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/js/bootstrap-datepicker.min.js"></script>
+
+    <script>
+        jQuery(document).ready(function() {
+            $('.js-datepicker').datepicker({
+                format: 'yyyy-mm-dd'
+            });
+        });
+    </script>
+{% endblock %}
+
 {% block body %}
     <div class="container">
         <div class="row">
@@ -7,9 +25,17 @@
                 <h1>New Genus</h1>
 
                 {{ form_start(genusForm) }}
-                    {{ form_widget(genusForm) }}
+                    {{ form_row(genusForm.name) }}
+                    {{ form_row(genusForm.subFamily) }}
+                    {{ form_row(genusForm.speciesCount, {
+                            'label': 'Number of Species'
+                        })
+                    }}
+                    {{ form_row(genusForm.funFact) }}
+                    {{ form_row(genusForm.isPublished) }}
+                    {{ form_row(genusForm.firstDiscoveredAt) }}
 
-                    <button type="submit" class="btn btn-primary">Save</button>
+                    <button type="submit" class="btn btn-primary" formnovalidate>Save</button>
                 {{ form_end(genusForm) }}
 
             </div>
